--- a/bike-service frontend/package.json
+++ b/bike-service frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "emailjs": "^4.0.3",
+    "emailjs-com": "^3.2.0",
     "primereact": "^10.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.4",
